# GodotRoadTool

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  setup_project.sh
build-cmake/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
game/: icon.svg.import  project.godot
game/addons/: terrain_3d
game/addons/road_tool/: plugin.cfg  plugin.gd
game/assets/KenneyVehicle/FBX format/: ambulance.fbx.import  box.fbx.import  cone-flat.fbx.import  cone.fbx.import  debris-bolt.fbx.import  debris-bumper.fbx.import  debris-door-window.fbx.import  debris-door.fbx.import  debris-drivetrain-axle.fbx.import  debris-drivetrain.fbx.import  debris-nut.fbx.import  debris-plate-a.fbx.import  debris-plate-b.fbx.import  debris-plate-small-a.fbx.import  debris-plate-small-b.fbx.import  debris-spoiler-a.fbx.import  debris-spoiler-b.fbx.import  debris-tire.fbx.import  delivery-flat.fbx.import  delivery.fbx.import  firetruck.fbx.import  garbage-truck.fbx.import  hatchback-sports.fbx.import  kart-oobi.fbx.import  kart-oodi.fbx.import  kart-ooli.fbx.import  kart-oopi.fbx.import  kart-oozi.fbx.import  police.fbx.import  race-future.fbx.import  race.fbx.import  sedan-sports.fbx.import  sedan.fbx.import  suv-luxury.fbx.import  suv.fbx.import  taxi.fbx.import  tractor-police.fbx.import  tractor-shovel.fbx.import  tractor.fbx.import  truck-flat.fbx.import  (+10 more)
game/assets/KenneyVehicle/FBX format/Textures/: colormap.png.import
game/assets/materials/: asphalte01.tres  lines01.tres  markings01.tres
game/assets/textures/asphalte01/: CityStreetAsphaltGenericClean001_AO_2K.jpg.import  CityStreetAsphaltGenericClean001_COL_2K.jpg.import  CityStreetAsphaltGenericClean001_DISP_2K.jpg.import  CityStreetAsphaltGenericClean001_GLOSS_2K.jpg.import  CityStreetAsphaltGenericClean001_NRM_2K.jpg.import  CityStreetAsphaltGenericClean001_REFL_2K.jpg.import  CityStreetAsphaltGenericClean001_ROUGH_2K.jpg.import
game/assets/textures/grass01/: Poliigon_GrassPatchyGround_4585_AmbientOcclusion.jpg.import  Poliigon_GrassPatchyGround_4585_BaseColor.jpg.import  Poliigon_GrassPatchyGround_4585_Metallic.jpg.import  Poliigon_GrassPatchyGround_4585_Normal.png.import  Poliigon_GrassPatchyGround_4585_ORM.jpg.import  Poliigon_GrassPatchyGround_4585_Roughness.jpg.import
game/scenes/: TestCharacter.tscn  TestVehicle.tscn  TruckVehicle.tscn  VehicleCamera.gd  VehicleCamera.gd.uid  main.tscn  test_character.gd  test_character.gd.uid  test_vehicle.gd  test_vehicle.gd.uid  truck_vehicle.gd  truck_vehicle.gd.uid
game/shaders/: markings.gdshader  markings.gdshader.uid
game/terrainData/: terrain3d-01-01.res  terrain3d-01_00.res  terrain3d-02_00.res  terrain3d_00-01.res  terrain3d_00-02.res  terrain3d_00_00.res
src/: SConstruct
src/RoadTool/: ProceduralBifurcation.cpp  ProceduralBifurcation.h  ProceduralIntersection.cpp  ProceduralIntersection.h  ProceduralRoad.cpp  ProceduralRoad.h  ProceduralRoadGizmos.cpp  ProceduralRoadGizmos.h  SConscript  register_types.cpp  register_types.h
